Seperate Recently Added and Top Played Page Added

--- a/app/src/main/res/layout/fragment_artist_fragment_full_view.xml
+++ b/app/src/main/res/layout/fragment_artist_fragment_full_view.xml
@@ -37,6 +37,7 @@
     </FrameLayout>
 
     <LinearLayout
+        android:layout_marginTop="8dp"
         android:id="@+id/drag_position"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -85,9 +86,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_weight="1"
-                android:src="@drawable/ic_play_button" />
+                android:src="@drawable/ic_play_circle_outline_24dp" />
 
         </LinearLayout>
 
