--- a/app/src/main/res/layout/fragment_album_fragment_full_view.xml
+++ b/app/src/main/res/layout/fragment_album_fragment_full_view.xml
@@ -49,7 +49,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp">
 
             <ImageView
                 android:id="@+id/back_2"
@@ -85,9 +86,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_weight="1"
-                android:src="@drawable/ic_play_button" />
+                android:src="@drawable/ic_play_circle_outline_24dp" />
 
 
         </LinearLayout>
