--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,73 +7,82 @@
     tools:context="com.techweblearn.musicbeat.Fragment.HomeFragment">
 
 
-
-
-<ScrollView android:layout_height="match_parent"
-    android:layout_width="match_parent">
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_gravity="center_horizontal">
 
-    <TextView
-        android:paddingBottom="16dp"
-        android:id="@+id/text_recently_played"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/recently_played"
-        android:textColor="?android:textColorPrimary"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recently_played"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="8dp"/>
+            <TextView
+                android:id="@+id/text_recently_played"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:text="@string/top_played"
+                android:textColor="?android:textColorPrimary"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
 
-    <TextView
-        android:id="@+id/text_recently_added"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/recently_added"
-        android:textColor="?android:textColorPrimary"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:paddingBottom="16dp"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recently_played"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="8dp" />
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recently_added"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="8dp"/>
+            <TextView
+                android:id="@+id/text_recently_added"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:text="@string/recently_added"
+                android:textColor="?android:textColorPrimary"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
 
-    <TextView
-        android:id="@+id/text_playlists"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/playlists"
-        android:textColor="?android:textColorPrimary"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:paddingBottom="16dp"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recently_added"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="8dp" />
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/playlists"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="8dp"/>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/text_playlists"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:text="@string/playlists"
+                android:textColor="?android:textColorPrimary"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/playlists"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="8dp" />
+
+            <Button
+                android:layout_marginBottom="8dp"
+                android:paddingRight="16dp"
+                android:paddingLeft="16dp"
+                android:id="@+id/add_playlist_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/search_text_drawable"
+                android:text="Add New Playlist" />
+        </LinearLayout>
 
 
-</ScrollView>
+    </ScrollView>
 
     <RelativeLayout
 
