--- a/app/src/main/res/layout/activity_feed_back.xml
+++ b/app/src/main/res/layout/activity_feed_back.xml
@@ -3,12 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.techweblearn.musicbeat.FeedBackActivity"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
+    <android.support.design.widget.AppBarLayout
+        app:elevation="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize">
+
+        <android.support.v7.widget.Toolbar
+            android:layout_marginRight="16dp"
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </android.support.design.widget.AppBarLayout>
     <TextView
-
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:textSize="25sp"
         android:textColor="?android:textColorPrimary"
         android:text="Feedback"
@@ -16,6 +29,8 @@
         android:layout_height="wrap_content" />
 
     <EditText
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:id="@+id/name"
         android:layout_marginTop="16dp"
         android:textColorHint="?android:textColorPrimary"
@@ -26,6 +41,8 @@
         android:layout_height="wrap_content" />
 
     <EditText
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:id="@+id/email"
         android:layout_marginTop="16dp"
         android:textColorHint="?android:textColorPrimary"
@@ -36,6 +53,8 @@
         android:layout_height="wrap_content" />
 
     <EditText
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:id="@+id/feedback"
         android:layout_marginTop="16dp"
         android:textColorHint="?android:textColorPrimary"
@@ -45,6 +64,8 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/search_edittext_drawable"
