--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,6 +28,7 @@
         android:layout_height="wrap_content" />
 
         <ImageView
+            android:id="@+id/clear"
             android:layout_marginRight="4dp"
             android:src="@drawable/ic_clear_black_24dp"
             android:layout_gravity="end|center_vertical"
