--- a/app/src/main/res/layout/song_list_recyclerview.xml
+++ b/app/src/main/res/layout/song_list_recyclerview.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,19 +10,13 @@
     android:paddingTop="8dp">
 
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
-        android:layout_alignParentStart="true"
-        app:cardElevation="2dp">
+
 
         <ImageView
             android:id="@+id/song_background"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="46dp"
+            android:layout_height="46dp" />
 
-    </android.support.v7.widget.CardView>
 
 
     <ImageView
@@ -72,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/song_name"
-        android:layout_toEndOf="@+id/cardView"
+        android:layout_toEndOf="@+id/song_background"
         android:layout_toStartOf="@+id/song_time"
         android:maxLines="1"
         android:textSize="13sp" />
