--- a/app/src/main/res/layout/mini_bottom_player.xml
+++ b/app/src/main/res/layout/mini_bottom_player.xml
@@ -1,34 +1,28 @@
-<RelativeLayout
+<RelativeLayout android:id="@+id/layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="?attr/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="48dp">
 
-    <android.support.v7.widget.CardView
+    <ImageView
         android:layout_marginLeft="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         android:layout_marginRight="8dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/cardView2"
-        android:saveEnabled="false">
-        <ImageView
-            android:saveEnabled="false"
+        android:src="@drawable/ic_arrow_up_black_24dp"
             android:scaleType="centerCrop"
             android:id="@+id/song_image"
             android:layout_width="40dp"
             android:layout_height="40dp" />
-    </android.support.v7.widget.CardView>
+
 
     <TextView
-        android:saveEnabled="false"
         android:paddingEnd="16dp"
         android:id="@+id/song_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/cardView2"
-        android:layout_toEndOf="@+id/cardView2"
+        android:layout_alignTop="@+id/song_image"
+        android:layout_toEndOf="@+id/song_image"
         android:layout_toStartOf="@+id/play_pause"
         android:maxLines="1"
         android:textColor="?android:textColorPrimary"
@@ -36,7 +30,6 @@
         android:textStyle="bold" />
 
     <TextView
-        android:saveEnabled="false"
         android:textColor="?android:textColorSecondary"
         android:paddingEnd="16dp"
         android:id="@+id/artist_name"
@@ -44,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/song_name"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/cardView2"
+        android:layout_toEndOf="@+id/song_image"
         android:layout_toStartOf="@+id/play_pause"
         android:maxLines="1"
         android:textSize="13sp" />
@@ -63,6 +56,6 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/cardView2"
+        android:layout_alignStart="@+id/song_image"
         />
 </RelativeLayout>
