--- a/app/src/main/res/layout/app_widget_small.xml
+++ b/app/src/main/res/layout/app_widget_small.xml
@@ -1,21 +1,67 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
+
+
+
+    <ImageView
+        android:scaleType="centerCrop"
+        android:id="@+id/song_art"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#09C"
-    android:padding="@dimen/widget_margin">
+    android:background="#00000000"
+    android:padding="@dimen/widget_margin"
+    android:orientation="vertical">
+
 
     <TextView
-        android:id="@+id/appwidget_text"
+        android:textStyle="bold"
+        android:maxLines="1"
+        android:textColor="#FFFFFF"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        android:id="@+id/song_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_gravity="center"
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:background="#09C"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:padding="4dp">
+        <ImageView
+            android:layout_margin="4dp"
+            android:background="@drawable/ic_skip_previous_white_24dp"
+            android:layout_weight="1"
+            android:id="@+id/prev"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
 
-</RelativeLayout>
+        <ImageView
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:id="@+id/play_pause"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
+
+        <ImageView
+            android:layout_margin="4dp"
+            android:background="@drawable/ic_skip_next_white_24dp"
+            android:layout_weight="1"
+            android:id="@+id/next"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
+
+</FrameLayout>
