--- a/app/src/main/res/xml/app_widget_small_info.xml
+++ b/app/src/main/res/xml/app_widget_small_info.xml
@@ -3,8 +3,8 @@
     android:initialKeyguardLayout="@layout/app_widget_small"
     android:initialLayout="@layout/app_widget_small"
     android:minHeight="40dp"
-    android:minWidth="180dp"
+    android:minWidth="80dp"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:resizeMode="horizontal|vertical"
+    android:resizeMode="none"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"></appwidget-provider>
